--- a/style.css
+++ b/style.css
@@ -143,14 +143,13 @@ body {
 }
 
 section {
-  height: 100vh;
+  max-height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
 
 .container.narrow {
   max-width: 640px;
-  height: 100%;
   margin: 0 auto;
   padding: 40px;
 }
