--- a/style.css
+++ b/style.css
@@ -151,26 +151,19 @@ section {
 .container.narrow {
   max-width: 640px;
   margin: 0 auto;
-  padding: 40px;
-}
-
-@media only screen and (max-width: 640px) {
-  .container.narrow {
-    padding: 16px;
-  }
+  padding: 80px 0 40px;
 }
 
 h1,
-p {
-  font-size: 20px;
+p,
+a {
+  font-size: 16px;
   font-weight: 400;
   line-height: 160%;
 }
 
 a {
-  font-size: 20px;
-  font-weight: 400;
-  margin-top: 80px;
+  margin-top: 40px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -182,4 +175,22 @@ a {
 
 a:hover {
   background-color: #F5F5F5;
+}
+
+hr {
+  margin-top: 40px;
+  border-style: dotted;
+  color: #999999;
+}
+
+@media only screen and (max-width: 640px) {
+  .container.narrow {
+    padding: 16px;
+  }
+
+  h1,
+  p,
+  a {
+    font-size: 14px;
+  }
 }
