--- a/style.css
+++ b/style.css
@@ -139,58 +139,108 @@ table {
 /* CSS Reset Ends */
 
 body {
-  font-family: 'Space Mono', monospace;
+  font-family: sans-serif;
 }
 
 section {
-  max-height: 100vh;
+  height: 100vh;
+  max-height: 1024px;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container.narrow {
   max-width: 640px;
   margin: 0 auto;
-  padding: 80px 0 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
-h1,
-p,
-a {
+.personal-info {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.bg-avatar {
+  width: 80px;
+  aspect-ratio: 1 / 1;
+  border-radius: 100%;
+  background: linear-gradient(108.4deg, #005AA7 -7.3%, #EC6EAD 97.8%);
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 110%;
+}
+
+span.pill {
+  width: fit-content;
+  display: flex;
+  padding: 8px 12px;
+  border: 1px solid #AFAFAF;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+a.location {
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  text-decoration: none;
+  color: #71767B;
+}
+
+a.location span {
+  display: flex;
+  margin-bottom: -2px;
   font-size: 16px;
   font-weight: 400;
-  line-height: 160%;
+  line-height: 18px;
 }
 
-a {
+.cta {
   margin-top: 40px;
-  display: inline-flex;
+  display: flex;
+  gap: 12px;
+}
+
+.button {
+  width: 120px;
+  height: 44px;
+  display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
-  color: #999999;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 500;
   text-decoration: none;
-  transition: background-color 200ms ease-in-out;
 }
 
-a:hover {
-  background-color: #F5F5F5;
+.primary-btn {
+  background-color: #000000;
+  color: #FFFFFF;
 }
 
-hr {
-  margin-top: 40px;
-  border-style: dotted;
-  color: #999999;
+.secondary-btn {
+  background-color: #F2F2F2;
+  color: #65646A;
 }
 
 @media only screen and (max-width: 640px) {
   .container.narrow {
-    padding: 16px;
-  }
-
-  h1,
-  p,
-  a {
-    font-size: 14px;
+    padding: 24px;
   }
 }
