--- a/style.css
+++ b/style.css
@@ -173,13 +173,13 @@ section {
   background: linear-gradient(108.4deg, #005AA7 -7.3%, #EC6EAD 97.8%);
 }
 
-h1 {
+.name {
   font-size: 24px;
   font-weight: 700;
   line-height: 110%;
 }
 
-span.pill {
+.pill {
   width: fit-content;
   display: flex;
   padding: 8px 12px;
@@ -190,7 +190,13 @@ span.pill {
   line-height: 100%;
 }
 
-a.location {
+.about {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+.location {
   width: fit-content;
   display: flex;
   justify-content: center;
@@ -200,7 +206,7 @@ a.location {
   color: #71767B;
 }
 
-a.location span {
+.location span {
   display: flex;
   margin-bottom: -2px;
   font-size: 16px;
