--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ section {
 
 .container.narrow {
   max-width: 640px;
+  min-width: 440px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -260,6 +261,7 @@ section {
 
 @media only screen and (max-width: 640px) {
   .container.narrow {
+    min-width: none;
     padding: 24px;
   }
 }
